# rubiksolver

./: .gitignore  README.md  pyproject.toml
src/rubiksolver/: app.py  calibrate.py
src/rubiksolver/cube/: __init__.py  cube.py
src/rubiksolver/gui/: __init__.py  gui.py
src/rubiksolver/gui/mesh/: __init__.py  rubiks_cube_mesh.py  transformation.py
src/rubiksolver/gui/widgets/: __init__.py  control_widget.py  cube3Dviewer_widget.py
src/rubiksolver/gui/workers/: __init__.py  cube_detection_worker.py
src/rubiksolver/vision/: __init__.py  cubeviz.py  vision.py
src/shaders/: shader.frag  shader.vert
tests/: test_cube.py
